--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -149,7 +149,7 @@
 				</form>
 
 				<div class="text-right">
-					<button type="button" class="btn btn btn-primary" onClick="">Create
+					<button id="buttonSessionCreateQuestion" type="button" class="btn btn btn-primary">Create
 						New Question</button>
 				</div>
 			</div>
