--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,9 +46,7 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Main</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
+						<li class="active"><a href="#" onClick="NANESPACE_QA_SESSION.showSessionList();">Main</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown"><a href="#" class="dropdown-toggle"
@@ -57,7 +55,7 @@
 								class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="#!/logout"
-									onClick="NANESPACE_QA_SESSION.logotUser();"><span
+									onClick="NANESPACE_QA_SESSION.logoutUser();"><span
 										class="glyphicon glyphicon-off"> Log Out</span></a></li>
 							</ul></li>
 					</ul>
@@ -97,9 +95,9 @@
 		</div>
 		<!-- div #divSessionList -->
 		<!-- div #divSessionDetail -->
-		<div id="divSessionDetail">
+		<div id="divSessionDetail" style = "display : none">
 
-            <div id="divSessionDetailAdministrations">
+           
 			<div>
 				<div class="text-right">
 					<button type="button" class="btn btn-default"
@@ -109,7 +107,7 @@
 				</div>
 			</div>
 			<hr>
-			<div>
+			 <div id="divSessionDetailAdministrations">
 				<form role="form">
 					<div class="form-group">
 						<label for="existSessionSessionTopic">Topic:</label> <input
@@ -135,7 +133,6 @@
 							id="existSessionSessionMaxQuestion" value="1">
 					</div>
 				</form>
-			</div>
 			</div>
 			<hr>
 			<div id="divSessionDetailQuestions"></div>
