--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,7 +46,8 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#" onClick="NANESPACE_QA_SESSION.showSessionList();">Main</a></li>
+						<li class="active"><a href="#"
+							onClick="NANESPACE_QA_SESSION.showSessionList();">Main</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown"><a href="#" class="dropdown-toggle"
@@ -95,9 +96,9 @@
 		</div>
 		<!-- div #divSessionList -->
 		<!-- div #divSessionDetail -->
-		<div id="divSessionDetail" style = "display : none">
+		<div id="divSessionDetail" style="display: none">
 
-           
+
 			<div>
 				<div class="text-right">
 					<button type="button" class="btn btn-default"
@@ -107,7 +108,7 @@
 				</div>
 			</div>
 			<hr>
-			 <div id="divSessionDetailAdministrations">
+			<div id="divSessionDetailAdministrations">
 				<form role="form">
 					<div class="form-group">
 						<label for="existSessionSessionTopic">Topic:</label> <input
@@ -123,8 +124,8 @@
 					<div class="form-group">
 						<label for="existSessionSessionStatus">Status:</label> <select
 							class="form-control" id="existSessionSessionStatus">
-							<option>OPEN</option>
-							<option>CLOSE</option>
+							<option value=OPEN>OPEN</option>
+							<option value="CLOSE">CLOSE</option>
 						</select>
 					</div>
 					<div class="form-group">
@@ -132,11 +133,54 @@
 							Question Per Attendee:</label> <input type="number" class="form-control"
 							id="existSessionSessionMaxQuestion" value="1">
 					</div>
+
+
+					<div class="table-responsive">
+						<table class="table table-striped table-hover">
+							<thead>
+								<tr>
+									<th>Name</th>
+									<th>Session Role</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody id="tbodySessionDetailAttendees">
+							</tbody>
+						</table>
+					</div>
+
+					<div id="divAddNewAttendee" class="form-group row">
+						<span class="col-md-2 control-label">New Attendee </span>
+						<div class="col-md-10">
+							<div class="col-md-1">
+								<label for="existSessionSessionNewAttendeeUserId">Name:</label>
+								                            </div>
+                            <div class="col-md-4">
+								<select class="form-control"
+                                    id="existSessionSessionNewAttendeeUserId">
+                                </select>
+							</div>
+							<div class="col-md-1">
+								<label for="existSessionSessionNewAttendeeAttendeeRole">Role:</label>
+							                         </div>
+                            <div class="col-md-2">
+								<select class="form-control"
+									id="existSessionSessionNewAttendeeAttendeeRole">
+									<option value="HOST">HOST</option>
+									<option value="ATTENDEE">ATTENDEE</option>
+								</select>
+							</div>
+                            <div class="col-md-2">
+                            <button type="button" id="buttonAddNewAttendee"
+                        class="btn btn-primary">Add</button>
+                            </div>
+						</div>
+					</div>
 				</form>
 			</div>
 			<hr>
 			<div id="divSessionDetailQuestions"></div>
-			<br/>
+			<br />
 			<div>
 				<form role="form">
 					<div class="form-group">
@@ -147,8 +191,8 @@
 				</form>
 
 				<div class="text-right">
-					<button id="buttonSessionCreateQuestion" type="button" class="btn btn btn-primary">Create
-						New Question</button>
+					<button id="buttonSessionCreateQuestion" type="button"
+						class="btn btn btn-primary">Create New Question</button>
 				</div>
 			</div>
 
